# SuperOdom

./: .gitignore  readme.md
ros2_humble_docker/: Dockerfile  container_run.sh
script/: benchmark_livox.yaml  benchmark_ouster.yaml  benchmark_velodyne.yaml  odom_to_tum.py  run.yaml  save_benchmark_result.py  save_imu_vs_icp.py  save_superodom_stats.py  save_superodom_stats_matplotlib.py
script/visualizers/: base.py  rerun_vis.py  rerun_visualizer.py  utils.py
super_odometry/: CMakeLists.txt  package.xml  readme.md  ros2.rviz  start_pose.txt
super_odometry/config/: livox_mid360.yaml  os1_128.yaml  vlp_16.yaml
super_odometry/config/ouster/: os1_128_calibration.yaml
super_odometry/config/velodyne/: vlp_16_calibration.yaml
super_odometry/include/super_odometry/: LocalMap.h
super_odometry/include/super_odometry/FeatureExtraction/: featureExtraction.h
super_odometry/include/super_odometry/ImuPreintegration/: imuPreintegration.h
super_odometry/include/super_odometry/LaserMapping/: laserMapping.h
super_odometry/include/super_odometry/LidarProcess/: LidarSlam.h  LocalMap.h
super_odometry/include/super_odometry/LidarProcess/factor/: SE3AbsolutatePoseFactor.h
super_odometry/include/super_odometry/config/: parameter.h
super_odometry/include/super_odometry/sensor_data/imu/: imu_data.h
super_odometry/include/super_odometry/sensor_data/pointcloud/: point_os.h
super_odometry/include/super_odometry/utils/: Twist.h  superodom_utils.h  utility.h
super_odometry/launch/: livox_mid360.launch.py  os1_128.launch.py  vlp_16.launch.py
super_odometry/src/: featureExtraction_node.cpp  imuPreintegration_node.cpp  laserMapping_node.cpp
super_odometry/src/FeatureExtraction/: featureExtraction.cpp
super_odometry/src/ImuPreintegration/: imuPreintegration.cpp
super_odometry/src/LaserMapping/: LocalMap.cpp  laserMapping.cpp  lidarOptimization.cpp
super_odometry/src/LidarProcess/: LidarSlam.cpp  SE3AbsolutatePoseFactor.cpp  pose_local_parameterization.cpp
super_odometry/src/parameter/: parameter.cpp
super_odometry/src/utils/: superodom_utils.cpp
super_odometry_msgs/: CMakeLists.txt  package.xml
